// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxInputGroup customize 1`] = `
<div>
  <div
    class="input-group large bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxInputGroup component 1`] = `
<div>
  <div
    class="input-group"
  >
    Test
  </div>
</div>
`;
